Change according team lead

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,12 +5,16 @@
         <title>Каталог продукции</title>
     </head>
     <body>
-        <header>
+        <header class="page-header">
             <div class="page-header__menu">
                 <div class="page-header__menu-logos-links">
                     <a href="" class="page-header__logo-site"> <img src="img/logo-mobile.svg" alt="logo site" class="page-header__logo-site-image" width="33" height="38"></a>
-                    <a href=""  class="page-header__logo-page"> <img src="img/logo-mobile-header.svg.png" class="page-header__logo-page-image"></a>
-                    <a class="page-header__logo-mobile_menu"> <img src="img/mobile-menu.svg" class="page-header__logo-menu-image"></a>
+                    <a href=""  class="page-header__logo-page"> 
+						<img src="img/logo-mobile-header.svg.png" class="page-header__logo-page-image" alt="">
+					</a>
+                    <a class="page-header__logo-mobile_menu"> 
+						<img src="img/mobile-menu.svg" class="page-header__logo-menu-image" alt="">
+					</a>
                 </div>
                 <nav class="menu-main">
                     <ul class="menu-main__sub">
@@ -26,8 +30,8 @@
             <section class="main__goods">
 				<h2>Каталог нашей продукции</h2>
                 <div class="main__good">
-                    <img src="img/catalog-1-mobile.jpg" alt="">
-                    <div class="main__content-good">
+                    <img src="img/catalog-1-mobile.jpg" alt="" class="main__catalog-mobile-image">
+                    <div class="main__good-content">
                         <span class="main__main-text">Cat Energy PRO 500 г</span>
                         <div class="main__good-volume">
                             <span class="main__good-volume-sub">Объем </span>
@@ -45,8 +49,8 @@
                     </div>
                 </div>
                 <div class="main__good">
-                    <img src="img/catalog-2-mobile.jpg" alt="">
-                    <div class="main__content-good">
+                    <img src="img/catalog-2-mobile.jpg" alt="" class="main__catalog-mobile-image">
+                    <div class="main__good-content">
                         <span class="main__main-text">Cat Energy PRO 1000 г</span>
                         <div class="main__good-volume">
                             <span class="main__good-volume-sub">Объем </span>
@@ -64,8 +68,8 @@
                     </div>
                 </div>
                 <div class="main__good">
-                    <img src="img/catalog-3-mobile.jpg" alt="">
-                    <div class="main__content-good">
+                    <img src="img/catalog-3-mobile.jpg" alt="" class="main__catalog-mobile-image">
+                    <div class="main__good-content">
                         <span class="main__main-text">Cat Energy PRO 500 г</span>
                         <div class="main__good-volume">
                             <span class="main__good-volume-sub">Объем </span>
@@ -83,8 +87,8 @@
                     </div>
                 </div>
                 <div class="main__good">
-                    <img src="img/catalog-4-mobile.jpg" alt="">
-                    <div class="main__content-good">
+                    <img src="img/catalog-4-mobile.jpg" alt="" class="main__catalog-mobile-image">
+                    <div class="main__good-content">
                         <span class="main__main-text">Cat Energy PRO 1000 г</span>
                         <div class="main__good-volume">
                             <span class="main__good-volume-sub">Объем </span>
@@ -102,8 +106,8 @@
                     </div>
                 </div>
                 <div class="main__good">
-                    <img src="img/catalog-5-mobile.jpg" alt="">
-                    <div class="main__content-good">
+                    <img src="img/catalog-5-mobile.jpg" alt="" class="main__catalog-mobile-image">
+                    <div class="main__good-content">
                         <span class="main__main-text">Cat Energy PRO 500 г</span>
                         <div class="main__good-volume">
                             <span class="main__good-volume-sub">Объем </span>
@@ -121,8 +125,8 @@
                     </div>
                 </div>
                 <div class="main__good">
-                    <img src="img/catalog-6-mobile.jpg" alt="">
-                    <div class="main__content-good">
+                    <img src="img/catalog-6-mobile.jpg" alt="" class="main__catalog-mobile-image">
+                    <div class="main__good-content">
                         <span class="main__main-text">Cat Energy PRO 1000 г</span>
                         <div class="main__good-volume">
                             <span class="main__good-volume-sub">Объем </span>
@@ -140,8 +144,8 @@
                     </div>
                 </div>
                 <div class="main__good">
-                    <img src="img/catalog-7-mobile.jpg" alt="">
-                    <div class="main__content-good">
+                    <img src="img/catalog-7-mobile.jpg" alt="" class="main__catalog-mobile-image">
+                    <div class="main__good-content">
                         <span class="main__main-text">Cat Energy PRO 500 г</span>
                         <div class="main__good-volume">
                             <span class="main__good-volume-sub">Объем </span>
