--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
             <div class="page-header__menu">
                 <div class="page-header__menu-logos-links">
                     <a href="" class="page-header__logo-site"> <img src="img/logo-mobile.svg" alt="logo site" class="page-header__logo-site-image" width="33" height="38"></a>
-                    <a href=""  class="page-header__logo-page"> <img src="img/logo-mobile-header.svg.png" class="page-header__logo-page-image"></a>
-                    <a class="page-header__logo-mobile_menu"> <img src="img/mobile-menu.svg" class="page-header__logo-menu-image"></a>
+                    <a href=""  class="page-header__logo-page"> <img src="img/logo-mobile-header.svg.png" class="page-header__logo-page-image" alt=""></a>
+                    <a class="page-header__logo-mobile_menu"> <img src="img/mobile-menu.svg" class="page-header__logo-menu-image" alt=""></a>
                 </div>
                 <nav class="menu-main">
                     <ul class="menu-main__sub">
@@ -33,11 +33,11 @@
 				
             <section class="programs">
                 <div class="programs_program">
-                    <div class="programs__header_program">
-                        <span class="programs__img_program"><img src="img/stand_cat.png"></span>
+                    <div class="programs__header-program">
+                        <span class="programs__img_program"><img src="img/stand_cat.png" alt=""></span>
                         <h3 class="programs__become-thinner">Похудение</h3>
                     </div>
-                    <span class="programs__header_program">
+                    <span class="programs__header-program">
                     Ваш кот весит больше собаки и 
                     почти утратил способность лазить по деревьям? Пора на диету! 
                     Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -45,11 +45,11 @@
                     <a href="catalog_slim.html" class="programs__catalog-slim">Каталог Slim</a>
                 </div>
                 <div class="programs_program">
-                    <div class="programs__header_program">
-                        <span class="programs__img_program"><img src="img/stand_cat.png"></span>
+                    <div class="programs__header-program">
+                        <span class="programs__img_program"><img src="img/stand_cat.png" alt=""></span>
                         <span >Набор массы</span>
                     </div>
-                    <span class="programs__header_program">
+                    <span class="programs__header-program">
                     Заработать авторитет среди дворовых котов и даже собак?
                     Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
                     </span>
