--- a/source/form.html
+++ b/source/form.html
@@ -9,8 +9,8 @@
             <div class="page-header__menu">
                 <div class="page-header__menu-logos-links">
                     <a href="" class="page-header__logo-site"> <img src="img/logo-mobile.svg" alt="logo site" class="page-header__logo-site-image" width="33" height="38"></a>
-                    <a href=""  class="page-header__logo-page"> <img src="img/logo-mobile-header.svg.png" class="page-header__logo-page-image"></a>
-                    <a class="page-header__logo-mobile_menu"> <img src="img/mobile-menu.svg" class="page-header__logo-menu-image"></a>
+                    <a href=""  class="page-header__logo-page"> <img src="img/logo-mobile-header.svg.png" class="page-header__logo-page-image" alt=""></a>
+                    <a class="page-header__logo-mobile_menu"> <img src="img/mobile-menu.svg" class="page-header__logo-menu-image" alt=""></a>
                 </div>
                 <ul>
                     <li><a href="#">Главная</a></li>
