--- a/source/form.html
+++ b/source/form.html
@@ -1,145 +1,155 @@
 <!doctype html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>Подбор программы занятий</title>
-    </head>
-    <body class="body">
-        <header class="page-header">
-            <div class="page-header__menu">
-                <div class="page-header__menu-logos-links">
-                    <a href="" class="page-header__logo-site"> 
-                    <img src="img/logo-mobile.svg" alt="logo site" class="page-header__logo-site-image" width="33" height="38">
-                    </a>
-                    <a href=""  class="page-header__logo-page"> 
-                    <img src="img/logo-mobile-header.svg.png" class="page-header__logo-page-image" alt="">
-                    </a>
-                    <a class="page-header__logo-mobile_menu"> 
-                    <img src="img/mobile-menu.svg" class="page-header__logo-menu-image" alt="">
-                    </a>
-                </div>
-                <nav class="menu-main">
-                    <ul class="menu-main__sub">
-                        <li class="menu-main__sub-menu-elem">
-                            <a href="#" class="menu-main__sub-menu-elem-link">Главная</a>
-                        </li>
-                        <li class="menu-main__sub-menu-elem">
-                            <a href="catalog.html" class="menu-main__sub-menu-elem-link">Каталог продукции</a>
-                        </li>
-                        <li class="menu-main__sub-menu-elem">
-                            <a href="form.html" class="menu-main__sub-menu-elem-link">Подбор программы</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <main class="main">
-            <h1 class="main__how-u-can-choose-program">Подбор программы</h1>
-            <span class="main__full-anket">Заполните анкету и мы подберем программу питания для вашего кота</span>
-            <form action="https://echo.htmlacademy.ru" class="form">
-                <div class="form__sub">
-                    <label for="name" class="form__sub-label-input-text">Имя:*</label>
-                    <input type="text" placeholder="Барсик" id="name" name="name" class="form__sub-input-text">
-                </div>
-                <div class="form__sub">
-                    <label for="weight" class="form__sub-label-input-text">Вес (кг):*</label>
-                    <input type="text" placeholder="7" id="weight" name="weight" class="form__sub-input-text">
-                </div>
-                <div class="form__sub">
-                    <label for="age" class="form__sub-label-input-text">Возраст (лет):</label>
-                    <input type="text" placeholder="7" id="age" name="age" class="form__sub-input-text">
-                </div>
-                <div class="form__sub">
-                    <input type="radio" name="losing-weight" id="losing-weight" checked class="form__sub-input-radio">
-                    <label for="losing-weight" class="form__sub-label-input-radio">Похудение</label>
-                </div>
-                <div class="form__sub">
-                    <input type="radio" name="losing-weight" id="mass-gain" class="form__sub-input-radio">
-                    <label for="mass-gain" class="form__sub-label-input-radio">Набор массы</label>
-                </div>
-                <div class="form__sub">
-                    <input type="radio" name="losing-weight" id="do-not-know" class="form__sub-input-radio">
-                    <label for="do-not-know" class="form__sub-label-input-radio">Не знаю (нужен ваш совет)</label>
-                </div>
-                <div class="form__contact">
-                    <h2 class="form__contact-data-for-cat-owner">
-                        Контактные данные (владельца кота)
-                    </h2>
-                    <div class="form__contact-data-for-cat-owner-line"></div>
-                </div>
-                <div class="form__sub">
-                    <label for="email" class="form__sub-label-email">E-mail:*</label>
-                    <input type="text" placeholder="kuklachev@gmail.com" id="email" name="email" class="form__sub-input-text-email">
-                </div>
-                <div class="form__sub">
-                    <label for="telephone" class="form__sub-label-telephone">Телефон:*</label>
-                    <input type="text" placeholder="8 (960) 900-60-90" id="telephone" name="telephone" class="form__sub-input-text-email">
-                </div>
-                <div class="form__commentary">
-                    <span class="form__commentary-comment">
-                    Комментарий
-                    </span>
-                    <div class="form__commentary-line"></div>
-                </div>
-                <textarea name="commentary" class="form__commentary-textarea">
-					Расскажите обо всех повадках кота
-				</textarea>
-                <div class="form__sub-additional">
-                    <span class="form__sub-add">Дополнительно</span>
-                    <div class="form__sub-additional-line"></div>
-                </div>
-                <div class="form__sub">
-                    <label for="sugarchange" class="form__sub-label-sugarchange">Сахарозаменитель</label>
-                    <input type="checkbox" name="sugarchange" id="sugarchange" class="form__sub-input-sugarchange">
-                </div>
-                <div class="form__sub">
-                    <label for="drink-water" class="form__sub-label-drink-water">Питьевая вода</label>
-                    <input type="checkbox" name="drink-water" class="form__sub-input-drink-water">
-                </div>
-                <div class="form__sub">
-                    <label for="milk" class="form__sub-label-milk">Молоко</label>
-                    <input type="checkbox" name="milk" class="form__sub-input-milk">
-                </div>
-                <div class="form__sub">
-                    <label class="form__sub-label-vitamines">Витамины</label>
-                    <input type="checkbox" name="vitamines" class="form__sub-input-vitamines">
-                </div>
-                <input type="submit" class="submit__form">
-                <span class="form__additional-fields">* — Обязательные поля</span>
-            </form>
-            <div class="communicating">
-                <span class="communicating__offer-communicating">
-                приглашаем к сотрудничеству дилеров!
-                </span>
-                <span class="communicating__address">
-                ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-                </span>
-            </div>
-            <div class="map">
-            </div>
-        </main>
-        <footer class="footer">
-            <img src="img/footer-logo.svg" alt="footer_logo" class="footer__footer-logo">
-            <ul class="footer__social-links">
-                <li class="footer__social-links-li">
-                    <a href="https://vk.com" class="footer__vk-link">
-                    </a>
-                </li>
-                <li class="footer__social-links-li">
-                    <a href="https://instagramm.com" class="footer__instagramm-link">
-                    </a>
-                </li>
-                <li class="footer__social-links-li">
-                    <a href="https://facebook.com" class="footer__facebook-link">
-                    </a>
-                </li>
-            </ul>
-            <div class="right-logo">
-                <a href="https://htmlacademy.ru" class="right-logo__link-organization">
-                HTML Academy
-                </a>
-                <img src="img/htmlacademy_footer_logo.svg" alt="" class="right-logo__logo-organization">
-            </div>
-        </footer>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Подбор программы занятий</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body class="body">
+  <header class="page-header">
+    <div class="page-header__menu">
+      <div class="page-header__menu-logos-links">
+        <a href="" class="page-header__logo-site">
+          <img src="img/logo-mobile.png" alt="logo site" class="page-header__logo-site-image" width="33" height="38">
+        </a>
+        <a href="" class="page-header__logo-page">
+          <img src="img/logo-mobile-header.png" class="page-header__logo-page-image" alt="" width="101" height="18">
+        </a>
+        <a class="page-header__logo-mobile_menu">
+          <img src="img/mobile-menu.png" class="page-header__logo-menu-image" alt="" width="24" height="18">
+        </a>
+      </div>
+      <nav class="menu-main">
+        <ul class="menu-main__sub">
+          <li class="menu-main__sub-menu-elem"><a href="#" class="menu-main__sub-menu-elem-link">Главная</a></li>
+          <li class="menu-main__sub-menu-elem"><a href="catalog.html" class="menu-main__sub-menu-elem-link">Каталог
+              продукции</a></li>
+          <li class="menu-main__sub-menu-elem"><a href="form.html" class="menu-main__sub-menu-elem-link">Подбор
+              программы</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main-form">
+    <h1 class="main-form__how-u-can-choose-program">Подбор программы</h1>
+    <span class="main-form__full-anket">Заполните анкету и мы подберем программу питания для вашего кота</span>
+    <form action="https://echo.htmlacademy.ru" class="form">
+      <div class="form__sub form__first-three-inputs">
+        <label for="name" class="form__sub-label-input-text ">Имя:*</label>
+        <input type="text" placeholder="Барсик" id="name" name="name" class="form__sub-input-text">
+      </div>
+      <div class="form__sub form__first-three-inputs">
+        <label for="weight" class="form__sub-label-input-text">Вес (кг):*</label>
+        <input type="text" placeholder="7" id="weight" name="weight" class="form__sub-input-text">
+      </div>
+      <div class="form__sub form__first-three-inputs form__first-three-inputs-custom-border">
+        <label for="age" class="form__sub-label-input-text">Возраст (лет):</label>
+        <input type="text" placeholder="7" id="age" name="age" class="form__sub-input-text">
+      </div>
+      <div class="main-form__radio-part">
+        <div class="form__sub-radio">
+          <input type="radio" name="losing-weight" id="losing-weight" checked class="form__sub-input-radio">
+          <label for="losing-weight" class="form__sub-label-input-radio">Похудение</label>
+        </div>
+        <div class="form__sub-radio">
+          <input type="radio" name="losing-weight" id="mass-gain" class="form__sub-input-radio">
+          <label for="mass-gain" class="form__sub-label-input-radio">Набор массы</label>
+        </div>
+        <div class="form__sub-radio">
+          <input type="radio" name="losing-weight" id="do-not-know" class="form__sub-input-radio">
+          <label for="do-not-know" class="form__sub-label-input-radio">Не знаю (нужен ваш совет)</label>
+        </div>
+      </div>
+      <div class="form__contact">
+        <h2 class="form__contact-data-for-cat-owner">
+          Контактные данные (владельца кота)
+        </h2>
+        <div class="form__contact-data-for-cat-owner-line"></div>
+      </div>
+      <div class="form__sub form__contact-data-cat-owner-email">
+        <label for="email" class="form__sub-label-email form__sub-contact-cat-data">E-mail:*</label>
+        <input type="text" placeholder="kuklachev@gmail.com" id="email" name="email" class="form__sub-input-text-email">
+      </div>
+      <div class="form__sub form__contact-data-cat-owner-telephone">
+        <label for="telephone" class="form__sub-label-telephone form__sub-contact-cat-data">Телефон:*</label>
+        <input type="text" placeholder="8 (960) 900-60-90" id="telephone" name="telephone"
+          class="form__sub-input-text-telephone">
+      </div>
+      <div class="form__commentary">
+        <span class="form__commentary-comment">
+          Комментарий
+        </span>
+        <div class="form__commentary-line"></div>
+      </div>
+      <textarea name="commentary" class="form__commentary-textarea">
+      Расскажите обо всех повадках кота
+		  </textarea>
+      <div class="form__sub-additional">
+        <span class="form__sub-add">Дополнительно</span>
+        <div class="forsm__sub-additional-line"></div>
+      </div>
+      <div class="form__sub-checkbox">
+        <input type="checkbox" name="sugarchange" id="sugarchange" class="form__sub-input-sugarchange">
+        <label for="sugarchange"
+          class="form__sub-label-sugarchange form__sub-contact-additional-data">Сахарозаменитель</label>
+      </div>
+      <div class="form__sub-checkbox">
+        <input type="checkbox" name="drink-water" class="form__sub-input-drink-water">
+        <label for="drink-water" class="form__sub-label-drink-water form__sub-contact-additional-data">Питьевая
+          вода</label>
+      </div>
+      <div class="form__sub-checkbox">
+        <input type="checkbox" name="milk" class="form__sub-input-milk">
+        <label for="milk" class="form__sub-label-milk form__sub-contact-additional-data">Молоко</label>
+      </div>
+      <div class="form__sub-checkbox">
+        <input type="checkbox" name="vitamines" class="form__sub-input-vitamines">
+        <label class="form__sub-label-vitamines form__sub-contact-additional-data">Витамины</label>
+      </div>
+      <div class="form__submit">
+        <input type="submit" class="form__submit-input" value="Отправить заявку">
+        <span class="form__required-fields-text">* — Обязательные поля</span>
+      </div>
+    </form>
+    <div class="communicating communicating-form">
+      <span class="communicating__offer-communicating">приглашаем к сотрудничеству дилеров!</span>
+      <span class="communicating__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</span>
+    </div>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+        class="map__iframe"></iframe>
+    </div>
+  </main>
+  <footer class="footer">
+    <img src="img/footer-logo.png" alt="footer_logo" class="footer__footer-logo" width="128" height="24">
+    <ul class="footer__social-links">
+      <li class="footer__social-links-li">
+        <a href="https://vk.com" class="footer__vk-link">
+          <img src="img/m-vk.png" alt="vk social icon" class="footer__social-image">
+        </a>
+      </li>
+      <li class="footer__social-links-li">
+        <a href="https://instagramm.com" class="footer__instagramm-link">
+          <img src="img/m-insta.png" alt="instagram social icon" class="footer__social-image">
+        </a>
+      </li>
+      <li class="footer__social-links-li">
+        <a href="https://facebook.com" class="footer__facebook-link">
+          <img src="img/m-fb.png" alt="facebook social icon" class="footer__social-image">
+        </a>
+      </li>
+    </ul>
+    <div class="footer__right-logo">
+      <a href="https://htmlacademy.ru" class="right-logo__link-organization">
+        HTML Academy
+      </a>
+      <img src="img/htmlacademy-footer-logo.png" alt="" class="right-logo__logo-organization">
+    </div>
+  </footer>
+</body>
+
 </html>
