что то не то с сеткой мобильной

--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
           <img src="img/logo-mobile-header.png" class="page-header__logo-page-image" alt="" width="101" height="18">
         </a>
         <a class="page-header__logo-mobile_menu">
-          <img src="img/mobile-menu.png" class="page-header__logo-menu-image" alt="" width="24" height="18">
+          <img src="img/m-close.png" class="page-header__logo-menu-image" alt="" width="24" height="18">
         </a>
       </div>
       <nav class="menu-main">
