--- a/source/index.html
+++ b/source/index.html
@@ -35,6 +35,7 @@
     <div class="header-background">
       <h1 class="header-background__main-words">Функциональное питание для котов</h1>
       <h2 class="header-background__work-for-your-cat">Занялся собой? Займись котом!</h2>
+      <img src="img/index-can-mobile.png" alt="index-can-mobile" class="header-background__img">
     </div>
   </header>
   <main class="main">
@@ -56,13 +57,13 @@
           <img src="img/right-arrow-long.png" alt="right arrow">
         </div>
       </div>
-      <div class="programs__program">
-        <div class="programs__header-program">
-          <span class="programs__img_program"><img src="img/walking-cat.png" alt=""
-              class="programs__img_program-img"></span>
+      <div class="programs__program programs__program-puma">
+        <div class="programs__header-program programs__header-program-puma">
+          <span class="programs__img_program "><img src="img/walking-cat.png" alt=""
+              class="programs__img_program-img programs__img-running-puma"></span>
           <h3 class="programs__name">Набор массы</h3>
         </div>
-        <span class="programs__program-content">
+        <span class="programs__program-content ">
           Заработать авторитет среди дворовых котов и даже собак?
           Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
         </span>
@@ -82,12 +83,12 @@
         <span class="how-it-is-work__sub-text">Функциональное питание содержит только полезные питательные
           вещества.</span>
       </div>
-      <div class="how-it-is-work__sub">
+      <div class="how-it-is-work__sub how-it-is-work__sub-powder">
         <span class="how-it-is-work__green advantage-1">
           <img src="img/advantage-2.png" alt="advantage2" class="how-it-is-work__sub-img-advantage" width="29"
             height="31">
         </span>
-        <span class="how-it-is-work__sub-text">Выпускается в виде порошка, который нужно лишь залить кипятком и
+        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-powder">Выпускается в виде порошка, который нужно лишь залить кипятком и
           готово.</span>
       </div>
       <div class="how-it-is-work__sub">
@@ -98,16 +99,17 @@
         <span class="how-it-is-work__sub-text">Замените один-два приема обычной еды на наше функциональное
           питание.</span>
       </div>
-      <div class="how-it-is-work__sub">
+      <div class="how-it-is-work__sub how-it-is-work__sub-clock">
         <span class="how-it-is-work__green advantage-1">
           <img src="img/advantage-4.png" alt="advantage4" class="how-it-is-work__sub-img-advantage" width="26"
             height="31">
         </span>
-        <span class="how-it-is-work__sub-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего
+        <span class="how-it-is-work__sub-text how-it-is-work__sub-text-in-a-month">Уже через месяц наслаждайтесь изменениями к лучшему вашего
           питомца!</span>
       </div>
     </section>
     <div class="live-example">
+      <div class="live-example__content">
       <span class="live-example__header">
         Живой пример
       </span>
@@ -123,34 +125,44 @@
         </div>
         <div class="live-example__numbers-sub">
           <span class="live-example__numbers-sub-header">60 дней</span>
-          <span class="live-example__numbers-sub-content">снижение веса</span>
+          <span class="live-example__numbers-sub-content">затрачено времени</span>
         </div>
       </div>
       <span class="live-example__price">Затраты на питание: 15 000 руб.</span>
       <div class="live-example__slider">
         <img src="img/cat1-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-1">
         <img src="img/cat2-slider.png" alt="cat 1 slider" class="live-example__slider-slide slide-2">
+
+        <div class="live-example__slider-controls">
         <span class="live-example__slider-button">Было</span>
         <div class="live-example__slider-on-off">
           <div class="live-example__slider-on-off-content">
+           <img src="img/in-slider-green.png" alt="in slider green" class="live-example__slider-on-off-content-image">
           </div>
         </div>
         <span class="live-example__slider-button">Стало</span>
       </div>
+      </div>
+    </div>
     </div>
     <div class="communicating">
+      <div class="communicating__main-text">
       <span class="communicating__offer-communicating">приглашаем к сотрудничеству дилеров!</span>
-      <span class="communicating__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</span>
+      <span class="communicating__address communicating__address-index">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</span>
+      </div>
     </div>
     <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20307.5497561974!2d30.498387490673824!3d50.48869895940726!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1586080633832!5m2!1sru!2sua"
-        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
+         height="362" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"
         class="map__iframe"></iframe>
     </div>
   </main>
   <footer class="footer">
-    <img src="img/footer-logo.png" alt="footer_logo" class="footer__footer-logo" width="128" height="24">
+    <div class="footer__footer-content">
+    <div class="footer__logo">
+      <img src="img/footer-logo.png" alt="footer_logo" class="footer__footer-logo footer__footer-logo-index" width="128" height="24">
+    </div>
     <ul class="footer__social-links">
       <li class="footer__social-links-li">
         <a href="https://vk.com" class="footer__vk-link">
@@ -174,6 +186,8 @@
       </a>
       <img src="img/htmlacademy-footer-logo.png" alt="" class="right-logo__logo-organization">
     </div>
+    </div>
+  </div>
   </footer>
 </body>
 
